--- a/Example.tex
+++ b/Example.tex
@@ -11,6 +11,8 @@
 
 \section{Введение}
 Это пример раздела. Здесь можно писать формулы:
+
+Далеркинс - все окей
 \[ E = mc^2 \]
 
 \subsection{Подраздел}
