новый пример коммитов

--- a/Example.tex
+++ b/Example.tex
@@ -13,6 +13,8 @@
 Это пример раздела. Здесь можно писать формулы:
 
 Далеркинс - все окей
+
+новый пример коммитов
 \[ E = mc^2 \]
 
 \subsection{Подраздел}
