--- a/Example.tex
+++ b/Example.tex
@@ -14,7 +14,7 @@
 
 Далеркинс - все окей
 \[ E = mc^2 \]
-
+PUPUPUPU
 \subsection{Подраздел}
 Текст с \textbf{полужирным} и \emph{курсивным} стилем.
 
