--- a/example.tex
+++ b/example.tex
@@ -1,97 +1,129 @@
-\documentclass{article}
-\usepackage[utf8]{inputenc}
+\documentclass[a4paper,12pt]{article}
+
 \usepackage[T2A]{fontenc}
+\usepackage[utf8]{inputenc}
 \usepackage[russian]{babel}
-\usepackage{amsfonts}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{fancyhdr}
-\usepackage{float}
-\usepackage[left=3cm,right=3cm,top=3cm,bottom=3cm]{geometry}
+
+\usepackage{amsmath, amssymb, amsfonts}
 \usepackage{graphicx}
 \usepackage{hyperref}
-\usepackage{indentfirst}
-\usepackage{multicol}
-\usepackage{stackrel}
 \usepackage{xcolor}
-\usepackage{yhmath}
+\usepackage{listings}
+\usepackage{fancyvrb} % Улучшенное отображение кода
+\usepackage{geometry} % Настройка полей
+\usepackage{indentfirst} % Отступ у первого абзаца
+\usepackage{tocbibind} % Добавляет содержание в оглавление
+
+\geometry{left=2.5cm, right=2.5cm, top=2.5cm, bottom=2.5cm}
+
+\title{\textbf{Лекция 2: Система типов в C}}
+\author{}
+\date{}
+
+\lstset{
+    language=C,
+    basicstyle=\ttfamily\small,
+    keywordstyle=\color{blue},
+    commentstyle=\color{gray},
+    stringstyle=\color{red},
+    numbers=left,
+    numberstyle=\tiny,
+    stepnumber=1,
+    breaklines=true,
+    frame=single
+}
 
 \begin{document}
-\pagestyle{empty}
-\normalsize
 
-\section{Матанализ от Виноградова}
-\subsection{}
-Сомнительный вариант:
-$$\sin{\pi p} = \pi \prod ^ {\infty} _ {k=1} \left ( 1 - \frac{p^2}{k^2\pi^{2}}\right), \, p \in \mathbb{R}$$
-Вариант от Виноградова:
-$$\sin{z} = z \prod ^ {\infty} _ {k=1} \left ( 1 - \frac{z^2}{k^2\pi^{2}}\right), \, z \in \mathbb{C}$$
+\tableofcontents % Создание оглавления
 
+\maketitle
 
-\subsection{}
-\textbf{Равномерная сходимость степенных рядов}. Пусть дан степенной ряд, $R \in \left( 0, +\infty \right]$ - его радиус сходимости. Тогда для любого $r \in \left(0, R \right)$ ряд равномерно сходится в круге $\overline{B} \left( z_0, r\right)$.
-\newline
+\section{Общие сведения о языке C}
+\begin{itemize}
+    \item C — регистрозависимый язык программирования.
+    \item Разрядность процессора обычно соответствует размеру указателя (адреса).
+\end{itemize}
 
+\section{Система типов в C}
+Типы данных в C можно разделить на несколько категорий: целочисленные, дробные и специализированные.
 
-\noindent \textbf{(Абель). О степенных рядах.} Пусть дан вещественный степенной ряд, $R \in \left( 0, +\infty \right)$ - его радиус сходимости. Если ряд сходится при $x = x_0 + R$ или $x = x_0 - R$, то он равномерно сходится на $[ x_0, x_0 + R ]$ или $[ x_0 - R, x_0]$ соответственно, а его сумма непрерывна в точке $x_0 + R$ слева (соответсвенно, в точке $x_0$ - $R$ справа).
-\newline
+\subsection{Целочисленные типы}
+\begin{itemize}
+    \item \textbf{int} — целочисленный тип (гарантированный диапазон $[-32767, 32767]$, но фактически 32-битный на большинстве платформ).
+    \item \textbf{short} — 16-битное целое число.
+    \item \textbf{long} — 32-битное или 64-битное число в зависимости от компилятора и ОС.
+    \item \textbf{long long} — 64-битное целое число.
+    \item \textbf{char} — 8 бит, диапазон может быть знаковым (-128..127) или беззнаковым (0..255).
+    \item \textbf{\_Bool} — логический тип (занимает 8 бит, но хранит 0 или 1).
+\end{itemize}
 
+Дополнительно к этим типам можно использовать модификатор \textbf{unsigned} для хранения только положительных значений.
 
-\noindent \textbf{Интегрирование степенных рядов.} Пусть дан вещественный степенной ряд, $R in (0 + \infty]$ - его радиус сходимости. Тогда ряд можно интегрировать почленно по любому отрезку, лежащему в интервале сходимости: если $[a,b] \subset (x_0 - R, x_0 + R)$, то $$\int^{b}_a \sum^{\infty}_{k = 0} a_k(x - x_0)^k dx = \sum^{\infty}_{k = 0}a_k\frac{(b - x_0)^{k + 1} - (a - x_0)^{k+1}}{k +1}$$
+\subsection{Дополнительные целочисленные типы}
+Эти типы требуют подключения заголовочных файлов:
+\begin{itemize}
+    \item \textbf{size\_t} и \textbf{ptrdiff\_t} (\texttt{\#include <stddef.h>}) — типы, соответствующие разрядности кода.
+    \item \textbf{uintX\_t} (\texttt{\#include <stdint.h>}) — гарантированная битность: 8, 16, 32, 64 бит.
+    \item \textbf{(unsigned) \_BitInt(X)} (\texttt{\#include <stdalign.h>}) — гарантированная длина X бит.
+\end{itemize}
 
+\subsection{Форматный ввод/вывод целых чисел}
+\begin{lstlisting}
+printf("%d", x);    // d - Signed integer (int)
+printf("%u", x);    // u - Unsigned integer (unsigned int)
+printf("%x", x);    // x - Hexadecimal (lowercase letters)
+printf("%X", x);    // X - Hexadecimal (uppercase letters)
+printf("%hd", x);   // hd - Short integer (short)
+printf("%hhd", x);  // hhd - Character (char)
+printf("%ld", x);   // ld - Long integer (long)
+printf("%lld", x);  // lld - Long long integer (long long)
+\end{lstlisting}
 
-\noindent Если, кроме того, ряд сходится при $x = x_0 + R$ или $x = x_0 - R$, то равенство верно и при $b = x_0 + R$ или $a = x_0 - R$ соответсвенно.
+\subsection{Дробные типы}
+\begin{itemize}
+    \item \textbf{float} — одинарная точность IEEE-754 ($10^{\pm38}$), 32 бита.
+    \item \textbf{double} — двойная точность, 64 бита.
+    \item \textbf{long double} — 128 бит (или 80 бит на некоторых системах), не рекомендуется.
+\end{itemize}
 
+Форматный ввод/вывод дробных чисел:
+\begin{lstlisting}
+printf("%f", x);   // float
+printf("%lf", y);  // double
+\end{lstlisting}
 
-\section{Большое задание от доктора Тренча}
+\subsection{Комплексные числа}
+\begin{lstlisting}
+#include <complex.h>
+_Complex float x = 1.5f - 2.3if;
+\end{lstlisting}
 
-\subsection{}
-$$\frac{3 s - 2}{(s^2 -4s +5)(s^2 - 6s + 13)} = \frac{A(s-2) + B}{(s - 2)^2 + 1} +\frac{C(s -3) + D}{(s - 3)^2 + 4}$$
+\section{Дополнительные возможности}
+Создание пользовательских типов через \textbf{typedef}:
+\begin{lstlisting}
+typedef unsigned int uint;
+uint x;
+\end{lstlisting}
 
+\section{Особенности констант}
+\begin{itemize}
+    \item Отрицательные числа в C — это представление со знаком, но отрицательных констант не существует.
+    \item Ведущий 0 указывает на восьмеричное число.
+    \item Префикс \texttt{0b} используется для двоичных констант.
+\end{itemize}
 
-where
+\section{Заголовочные файлы}
 
-$$(A(s-2) + B)((s - 3)^2 + 4) + (C(s - 3) + D)((s - 2)^2 + 1) = 3s - 2$$
-\[
-\begin{array}{rl}
-5B - C + D &= 4 \ \text{(set $s = 2$);} \\
-4A + 4B + 2D &= 7 \ \text{(set $s = 3$);} \\
--26A + 13B - 15C + 5D &= -2 \ \text{(set $s = 0$);} \\
-A + C &= 0 \ \text{(equate coefficients of $s^3$).}
-\end{array}
-\]
+В языке C существуют различные стандартные заголовочные файлы, которые подключаются для расширения возможностей работы с типами данных, математическими операциями и многими другими аспектами. Вот основные из них, использованные в данном конспекте:
 
-
-
-Solving this system yields $A = 1$, $B =1/2$, $C = -1$, $D = 1/2$. Therefore,
-$$\frac{3s -2}{(s^2 -4s + 5)(s^2 -6s + 13)} = \frac{1}{2} \left[\frac{2(s -2) +1}{(s -2)^2 + 1} - \frac{2(s - 3) - 1}{(s - 3)^2 + 4}\right]$$
-
-$$\leftrightarrow e^{2t} \left(\cos{t} + \frac{1}{2} \sin{t}\right) - e^{3t} \left( \cos{2t} - \frac{1}{4} \sin{2t} \right)$$.
-
-\section{Маленькие задание от доктора Тренча}
-\subsection{}
-$$
-e^t \int^{t}_0 e^{2\tau} \sin{(t - \tau)} d\tau = \int^{t}_0 e^{3\tau}\left(e^{(t - \tau)} \sin{(t -\tau)}\right) d\tau; \, e^{3t} \leftrightarrow \frac{1}{s - 3} \, \text{and} \, e^t \sin{h} t \leftrightarrow \frac{1}{(s - 1)^2 - 1},
-$$
-
-
-
-so $H(s) = \frac{1}{(s - 3) ((s - 1) ^ 2 - 1)}$.
-\subsection{}
-$$
-\text{Substring} \, x = t - \tau \, \text{yields} \int\limits^{t}_0 f(t - \tau)g(\tau) d\tau = - \int^{0}_t f(x)g(t - x)(-dx) = \int^{t}_0 f(x)g(t - x) dx = \int^{t}_0 f(\tau)g(t - \tau) d\tau.
-$$
-
-
-\subsection{}
-$$
-te^{2t} \leftrightarrow \frac{1}{(s-2)^2} \, \text{and} \, \sin{2t} \leftrightarrow \frac{2}{(s^2 + 4)}, \, \text{so} \, H(s) = \frac{2}{(s - 2)^2(s^2 + 4)}.
-$$
-
-$
-\beta_n = 2 \left [\int_0^{1/2} x \sin n \pi x \, dx + \int_{1/2}^{1} (1 - x) \sin n \pi x \, dx \right];$
+\begin{itemize}
+    \item \textbf{\#include <stddef.h>} — этот заголовочный файл включает определения для стандартных типов данных и макросов, таких как \texttt{size\_t}, \texttt{ptrdiff\_t} и \texttt{NULL}.
+    \item \textbf{\#include <stdint.h>} — определяет типы с фиксированным размером, такие как \texttt{int32\_t}, \texttt{uint64\_t} и другие.
+    \item \textbf{\#include <complex.h>} — включает поддержку комплексных чисел в языке C, позволяя работать с комплексными числами через типы \texttt{\_Complex float}, \texttt{\_Complex double}.
+    \item \textbf{\#include <stdbool.h>} — добавляет поддержку логического типа \texttt{bool} и значений \texttt{true} и \texttt{false}. Этот заголовочный файл используется для работы с булевыми значениями, что значительно упрощает код.
+    \item \textbf{\#include <math.h>} — предоставляет математические функции, такие как \texttt{sin}, \texttt{cos}, \texttt{sqrt} и другие.
+    \item \textbf{\#include <stdio.h>} — предоставляет функции ввода/вывода, такие как \texttt{printf}, \texttt{scanf}, \texttt{fopen} и другие для работы с текстовыми и бинарными файлами.
+\end{itemize}
 
 \end{document}
-
-
-
